--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Coming Soon...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>AtaraxyCreations.com</title>
+</head>
+<body>
+  <p>Coming Soon...</p>
+</body>
+</html>
