--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>AtaraxyCreations.com</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AtaraxyCreations - Coming Soon</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="/favicon.ico">
 </head>
-<body>
-  <p>Coming Soon...</p>
+<body class="bg-gray-900 text-white">
+    <div class="flex items-center justify-center min-h-screen flex-col px-6 text-center">
+        <h1 class="text-4xl font-bold mb-4 text-teal-400">AtaraxyCreations</h1>
+        <p class="text-lg mb-6 text-gray-300">Crafting the future of web solutions. We're launching something amazing soon!</p>
+
+        <div class="relative w-full max-w-md">
+            <input 
+                type="email" 
+                placeholder="Enter your email for updates" 
+                class="w-full py-3 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-teal-500 focus:border-transparent bg-gray-800 text-gray-200 placeholder-gray-400"
+            >
+            <button 
+                class="absolute right-0 top-0 bottom-0 bg-teal-500 text-white px-6 py-3 rounded-md hover:bg-teal-600 focus:outline-none focus:ring-2 focus:ring-teal-300"
+            >
+                Notify Me
+            </button>
+        </div>
+
+        <p class="mt-4 text-sm text-gray-500">Stay tuned! Follow us on social media for updates.</p>
+
+        <div class="flex items-center justify-center space-x-4 mt-6">
+            <a href="#" class="text-gray-400 hover:text-teal-400 transition">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M22.54 6.42a8.64 8.64 0 0 1-2.48.68 4.31 4.31 0 0 0 1.89-2.37 8.66 8.66 0 0 1-2.73 1.04 4.3 4.3 0 0 0-7.3 3.92A12.2 12.2 0 0 1 3.1 5.2a4.3 4.3 0 0 0 1.33 5.74 4.24 4.24 0 0 1-1.95-.54v.05a4.3 4.3 0 0 0 3.45 4.21 4.3 4.3 0 0 1-1.94.07 4.3 4.3 0 0 0 4.02 2.99A8.66 8.66 0 0 1 2 18.36a12.2 12.2 0 0 0 6.6 1.94c7.92 0 12.25-6.57 12.25-12.26 0-.19-.01-.37-.02-.56A8.76 8.76 0 0 0 22.54 6.42z"/>
+                </svg>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-teal-400 transition">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M12 2.04c5.52 0 10 4.48 10 10 0 4.41-3.59 8-8 8-1.33 0-2.56-.33-3.64-.91-.26-.14-.37-.44-.23-.7.15-.26.45-.37.71-.22.93.48 2 .75 3.16.75 3.9 0 7-3.1 7-7s-3.1-7-7-7-7 3.1-7 7c0 1.04.23 2.02.65 2.89.14.27.03.61-.26.72-.26.1-.56-.03-.65-.29C4.59 14.02 4 12.56 4 11c0-4.42 3.59-8 8-8m0-2C5.48 0 0 5.48 0 12s5.48 12 12 12 12-5.48 12-12S18.52 0 12 0zm0 5.5c1.38 0 2.5 1.12 2.5 2.5S13.38 10.5 12 10.5 9.5 9.38 9.5 8s1.12-2.5 2.5-2.5z"/>
+                </svg>
+            </a>
+            <a href="#" class="text-gray-400 hover:text-teal-400 transition">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M21 8.35a7.65 7.65 0 0 1-2.11.57 3.7 3.7 0 0 0 1.64-2.04 7.62 7.62 0 0 1-2.41.93 3.72 3.72 0 0 0-6.32 3.39A10.54 10.54 0 0 1 3.07 7.36a3.72 3.72 0 0 0 1.15 4.95 3.7 3.7 0 0 1-1.68-.47v.05c0 1.76 1.25 3.24 2.91 3.58a3.71 3.71 0 0 1-1.67.06 3.72 3.72 0 0 0 3.47 2.58A7.46 7.46 0 0 1 2 18.08 10.52 10.52 0 0 0 8.17 20c6.29 0 9.74-5.21 9.74-9.74l-.01-.44a7.02 7.02 0 0 0 1.72-1.78 7.23 7.23 0 0 1-2.1.58c.75-.45 1.33-1.15 1.61-1.98z"/>
+                </svg>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
